--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <div id = "allContentCenter">
 		<%= render partial: "layouts/headerNav" %> 
 		<%= yield %>
-
+		<%= render partial: "layouts/footer" %>
 <div>
 
 </body>
