--- a/app/views/layouts/_headerNav.html.erb
+++ b/app/views/layouts/_headerNav.html.erb
@@ -18,7 +18,7 @@
 				<li>
 					<%= link_to "Experience", "/experience", :class => "liLink" %>
 				</li>
-				<li>Interest</li>
+				<!--<li>Interest</li>-->
 				<li>
 					<%= link_to "Contact", "/contact", :class => "liLink" %>
 				</li>
