--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -287,5 +287,9 @@ body {
 //--------------------Blog Content------------------------------------------------------------
 //
 #blogContent pre {
-	background-color: #E0E6F8;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #CEE3F6;
+	border: 2px dashed grey;
 }
