--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,4 +1,10 @@
 <div id = "blogContent", class = "centerblock">
+
+	<br>
+	<h3>[OdinProject] Javascript Calculator </h3>
+
+	<%= render partial: "calculator" %>
+
 	<br>
 	<h3>[Leetcode] Linked List Cycle</h3>
 	<p><b>Question</b>: Given a linked list, determine if it has a cycle in it.</p>
