fixed calculator bug

--- a/app/views/blog/_calculator.html.erb
+++ b/app/views/blog/_calculator.html.erb
@@ -1,4 +1,5 @@
 <div id = "calContainer">
+
 	<div class="display">
 		<div id = "dis"> 0 </div>
 	</div>
@@ -73,5 +74,9 @@
 				</th>
 			</tr>					
 		</table>
+	</div>
+
+	<div class = "calReload" onClick="window.location.reload()"> 
+	Refresh Calculator
 	</div>
 </div>
