--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -77,3 +77,17 @@
 	background-color: orange;
 	color: white;
 }
+
+.calReload {
+	cursor: pointer;
+	width: 150px;
+	height: 50px;
+	background-color: #D6ADFF;
+	font-size: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15px;
+	padding: 5px;
+	border-radius: 5px;
+	border: 1px dotted black;
+}
