--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,7 +1,7 @@
-<div id = "blogContent", class = "centerblock">
+<div id = "blogContent" class = "centerblock">
 
 	<br>
-	<h3>[OdinProject] Javascript Calculator </h3>
+	<h3>[OdinProject] Javascript Calculator (Refresh to Try) </h3>
 
 	<%= render partial: "calculator" %>
 
