--- a/app/views/blog/_calculator.html.erb
+++ b/app/views/blog/_calculator.html.erb
@@ -7,76 +7,73 @@
 	<div class = "keyboard">
 		<table id = "caltable">
 			<tr>
-				<th class = "grey">
+				<th class = "calculatorGrey calculatorCell">
 					AC
 				</th>
-				<th class = "grey">
+				<th class = "calculatorGrey calculatorCell">
 					+/-
 				</th>
-				<th class = "grey">
+				<th class = "calculatorGrey calculatorCell">
 					%
 				</th>
-				<th class = "orange">
+				<th class = "calculatorOrange calculatorCell">
 					/
 				</th>
 			</tr>
 			<tr>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					7
 				</th>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					8
 				</th>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					9
 				</th>
-				<th class = "orange">
+				<th class = "calculatorOrange calculatorCell">
 					x
 				</th>
 			</tr>	
 			<tr>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					4
 				</th>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					5
 				</th>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					6
 				</th>
-				<th class = "orange">
+				<th class = "calculatorOrange calculatorCell">
 					-
 				</th>
 			</tr>	
 			<tr>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					1
 				</th>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					2
 				</th>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					3
 				</th>
-				<th class = "orange">
+				<th class = "calculatorOrange calculatorCell">
 					+
 				</th>
 			</tr>
 			<tr>
-				<th colspan = "2" class = "white">
+				<th colspan = "2" class = "calculatorWhite calculatorCell">
 					0
 				</th>
-				<th class = "white">
+				<th class = "calculatorWhite calculatorCell">
 					.
 				</th>
-				<th class = "orange">
+				<th class = "calculatorOrange calculatorCell">
 					=
 				</th>
 			</tr>					
 		</table>
 	</div>
 
-	<div class = "calReload" onClick="window.location.reload()"> 
-	Refresh Calculator
-	</div>
 </div>
