--- a/app/views/layouts/_headerNav.html.erb
+++ b/app/views/layouts/_headerNav.html.erb
@@ -13,7 +13,7 @@
 					<%= link_to "Home", "/home", :class => "liLink" %>
 				</li>
 				<li>
-					<%= link_to "Coding Blog", "/blog", :class => "liLink" %>
+					<%= link_to "Coding Blog", "/blogs", :class => "liLink" %>
 				</li>
 				<li>
 					<%= link_to "Experience", "/experience", :class => "liLink" %>
