--- a/app/views/layouts/_headerNav.html.erb
+++ b/app/views/layouts/_headerNav.html.erb
@@ -18,7 +18,9 @@
 				<li>
 					<%= link_to "Experience", "/experience", :class => "liLink" %>
 				</li>
-				<!--<li>Interest</li>-->
+				<li>
+					<%= link_to "Projects", "/projects", :class => "liLink" %>
+				</li>
 				<li>
 					<%= link_to "Contact", "/contact", :class => "liLink" %>
 				</li>
