--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,6 +11,59 @@ body {
 }
 
 
+//############################################################################################
+//--------------------Frequently used----------------------------------------------------------
+//Button
+.btn {
+	border-radius: 5px;
+}
+
+.btn-blue {
+	color: white;
+	background-color:  #0077b3;
+}
+
+.btn-red {
+	color: white;
+	background-color:  red;
+}
+
+.btn-white {
+	color: black;
+	border: 1px solid black;
+}
+
+.aligncenter {
+	display: inline-block;
+    position: relative;
+    left: 50%;
+    text-align: center;
+    -moz-transform: translatex(-50%);
+	-webkit-transform: translatex(-50%);
+	transform: translatex(-50%);
+}
+
+.aligncenter-edit-delete {
+	display: inline-block;
+    position: relative;
+    left: 50%;
+    text-align: center;
+    -moz-transform: translatex(-200px);
+	-webkit-transform: translatex(-200px);
+	transform: translatex(-200px);
+}
+
+li {
+	list-style-type: none;
+}
+
+textarea {
+	font-family: proxima-nova, helvetica, Avenir, arial, sans-serif;
+}
+
+//--------------------End of equently used------------------------------------------------------
+
+
 // control all the content, basically center everything in center
 #allContentCenter {
 	position: absolute;
@@ -242,7 +295,7 @@ body {
 
 .stringInput {
 	margin: 10px;
-	width: 200px;
+	width: 500px;
 	height: 25px;
 	border-radius: 5px;
 	font-size: 20px;
@@ -288,12 +341,62 @@ body {
 //
 .blogContentLink {
 	text-decoration: none;
+}
+
+.blogContentLink-grey {
 	color: #4d4d4d;
 }
+
 .blogContent pre {
+	position: relative;
+	left: 50%;
+	-moz-transform: translatex(-50%);
+	-webkit-transform: translatex(-50%);
+	transform: translatex(-50%);
 	width: 80%;
-	margin-left: auto;
-	margin-right: auto;
 	background-color: #CEE3F6;
 	border: 2px dashed grey;
+}
+
+.singleblog {
+	padding-left: 60px;
+	padding-bottom: 2px;
+	border-left: 1px solid #D0D0D0;
+	border-bottom: 1px solid #D0D0D0;
+	box-shadow: -1px 1px 1px grey;
+}
+
+.singleblog:hover {
+	background-color: #f1f1f1;
+
+}
+
+.btn-newBlog {
+	padding: 10px 25px;
+	font-size: 20px;
+}
+
+.btn-edit-delete {
+	width: 150px;
+	padding: 5px 15px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.btn-back {
+	width: 200px;
+	padding: 5px 15px;
+}
+
+.btn-submit {
+	border: 0px;
+	width: 232px;
+	height: 40px;
+	font-size: 20px;
+	padding: 5px 15px; 
+}
+
+.btn-submit:hover {
+	background-color: #00aaff;
+	cursor: pointer;
 }
