--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,11 +1,15 @@
 <%= form_for(@blog) do |b| %>
 	<p>
 		<%= b.label :name %>
-		<%= b.text_field :name %>
+		<%= b.text_field :name, :class => "stringInput" %>
 	</p>
 	<p>
-		<%= b.label :content %>
-		<%= b.text_area :content %>
+		<%= b.label :content %><br>
+		<%= b.text_area :content, :class => "textInput" %>
 	</p>
-	<p><%= b.submit %></p>
+	<p>
+		<%= b.label :code %><br>
+		<%= b.text_area :code, :class => "textInput" %>
+	</p>
+	<p><%= b.submit "Submit", :class=>"blogContentLink btn btn-blue btn-submit aligncenter" %></p>
 <% end %>
