--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -2,4 +2,6 @@
 	<br><h2>Edit Blog</h2>
 
 	<%= render partial: "form" %>
+
+	<p><%= link_to "Cancel", blog_path(@blog), :class => "blogContentLink btn btn-white btn-back aligncenter" %></p><br>
 </div>
