--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -2,4 +2,6 @@
 	<br><h2>Create New Blog</h2>
 
 	<%= render partial: "form" %>
+
+	<p><%= link_to "Cancel", blogs_path(), :class => "blogContentLink btn btn-white btn-back aligncenter" %></p><br>
 </div>
