--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,10 @@
 <div class = "centerblock blogContent">
 	<br><h2><%= @blog.name %></h2>
 
-	<p><%= @blog.content %>
+	<p>
+		<b>Question and Description:</b><br>
+		<%= @blog.content %>
+	</p>
 
 		<pre><code class = "language-css">
 		<%= @blog.code %>
