--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <body>
 
 <div id = "allContentCenter">
+		<%= flash.notice %>
 		<%= render partial: "layouts/headerNav" %> 
 		<%= yield %>
 		<%= render partial: "layouts/footer" %>
