--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,11 @@
 <div class = "centerblock blogContent">	
 	<br><h1>Here are some of the projects I've done</h1>
 
-	<%= render partial: "iphoneCalculator" %><br>
+	<a href="/projects/iphonecal"><div class="projectItem blogContentLink-grey">
+		Javascript Calculator
+		<hr>
+		<%=	image_tag("JavaCal.png", :width => 110, :height => 165) %>
+	</div></a>
+
+
 </div>
