--- a/app/views/layouts/_headerNav.html.erb
+++ b/app/views/layouts/_headerNav.html.erb
@@ -19,7 +19,7 @@
 					<%= link_to "Experience", "/experience", :class => "liLink" %>
 				</li>
 				<li>
-					<%= link_to "Projects", "/projects", :class => "liLink" %>
+					<%= link_to "Games", "/projects", :class => "liLink" %>
 				</li>
 				<li>
 					<%= link_to "Contact", "/contact", :class => "liLink" %>
