--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <div class = "centerblock blogContent">	
-	<br><h1>Here are some of the projects I've done</h1>
+	<br><h1>Here are some of the Apps I've made</h1>
 
 	<a href="/projects/iphonecal"><div class="projectItem blogContentLink-grey">
 		Javascript Calculator
@@ -7,5 +7,16 @@
 		<%=	image_tag("JavaCal.png", :width => 110, :height => 165) %>
 	</div></a>
 
+	<a href="/projects/snake"><div class="projectItem blogContentLink-grey">
+		Snake Game
+		<hr>
+		<%=	image_tag("snakeGame.png", :width => 181, :height => 165) %>
+	</div></a>
+
+	<a href="/projects/tictactoe"><div class="projectItem blogContentLink-grey">
+		Tic-Tac-Toe
+		<hr>
+		<%=	image_tag("tictactoe.png", :width => 134, :height => 165) %>
+	</div></a>
 
 </div>
